--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@use "styles/theme-colors.scss" as *;
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+
+body {
+  margin: 0;
+}
